# pybind11-cmake-bank

./: CMakeLists.txt  README.md
include/example/: example.hpp
python/: setup.py
python/src/: python_wrapper.cpp  test_example.py
src/: bank.cpp  example.cpp
tests/: test_bank.cpp  test_gcd.cpp
